--- a/index.html
+++ b/index.html
@@ -77,8 +77,10 @@
             <div class="carousel-caption d-none d-md-block">
                 <h5>Contact Me</h5>
                 <p>If you have any questions or concern please feel free to reach out to me. <br>
-                <p>Email: beneathak@gmail.com</p>
-                <p>Phone: 901-379-4593</p>
+                <p>Email:ravoyo5656@lewenbo.com</p>
+                <p>Phone: (746)679-2470</p>
+                <p>Sheila Mcintosh P.O. Box 360 4407 Et Rd <br>.
+                    Santa Monica FL 30309</p>
               </div>
           </div>
         </div>
