--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
              <li><a href="#">About</a></li>
               <li><a href="#">Feel Better</a></li>
                <li><a href="#">Contact Me</a></li>
-                <li><a href="#">Login</a></li>
+                <li><a href="#">Signup</a></li>
         </ul>
     
         
@@ -35,7 +35,7 @@
             <li class="hideOnMobile"><a href="#">About</a></li>
             <li class="hideOnMobile"><a href="#">Feel Better</a></li>
             <li class="hideOnMobile"><a href="#">Contact Me</a></li>
-            <li class="hideOnMobile"><a href="#">Login</a></li>
+            <li class="hideOnMobile"><a href="#">Signup</a></li>
             <li class="menu-button" onclick=showSidebar()><a href="#"><svg xmlns="http://www.w3.org/2000/svg" height="55" viewBox="0 -960 960 960" width="26"><path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"/></svg></a></li>
         </ul>
     </nav>
@@ -137,8 +137,8 @@
             <h2>Signup Form</h2>
             <input type="text" id="Submit" placeholder="email">
        </div>
-       <div class="contactus">
-           <h2>Contact Us</h2>
+       <div class="contactme">
+           <h2>Contact Me</h2>
        <address>Sheila Mcintosh
            P.O. Box 360 4407 Et Rd.<br>
            Santa Monica FL 30309 <br>
