--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         </li>
       </ul>
     </nav>
-    <!-- This is the Javascript function for the side Nav side bar -->
+    <!-- This is the Javascript function for the side Navbar -->
     <script>
       function showSidebar() {
         const sidebar = document.querySelector(".sidebar");
@@ -184,6 +184,7 @@
     <!-- These three divs explain the importance of Analyzing your food intake -->
     <h1>Reasons Why Nutrition Analysis is Good</h1>
     <div id="container">
+      
       <div>
         <h6>Personalized Health Goals:</h6>
         <p>
